Fix build destination

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-destination : /Users/ben/Sites/langfeld.me
+destination : /Users/sjm/Sites/smurphmeister.github.com
 auto        : true
 lsi         : false
 pygments    : true
