Don't run jekyll in auto mode since this doesn't play nice with GitHub pages Conflicts:
	_config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 destination : /Users/sjm/Sites/smurphmeister.github.com
-auto        : true
+auto        : false
 lsi         : false
 pygments    : true
 permalink   : none
